# glmtask

./: .gitignore  CMakeLists.txt  cmake-variants.yaml  readme.md
cmake/: app_sources.cmake
linker/: hpm6750_xip_boot.ld  hpm6e80_xip_boot.ld
openocd/: cmsis_dap.cfg  hpm6750ecat.cfg  hpm6e00evk.cfg
sdk/cmake/: vendor-sdk-config.cmake
sdk/include/: vendor_common.h  vendor_sdk.h
src/: bsp_config.h  bsp_user_config.c  config_gui.py  hpm_interlayer.c  hpm_interlayer.h  maintask.c
src/Common/: alarm.c  alarm.h  app_init.c  data_define.h  hpm_appheader.c  hpm_appheader.h  iodefine.h  logic.c  logic.h  logic_type.h  teach.c  teach.h
src/Module/: dev_reset.c  reset_axis.c  reset_axis.h  run_main.c  terminal_tool.c  terminal_tool.h
src/Utils/: Jog.c  Jog.h  hz_alarm.c  hz_alarm.h  hz_fsm.c  hz_fsm.h  lock.c  lock.h  modbus_utils.c  modbus_utils.h  queue_tool.c  queue_tool.h  uph.c  uph.h  utils.c  utils.h
tool/ota_pack_tool/: pack_ota.py
tool/sdk_registry/: registry.config.json  sync_sdk_from_registry.ps1
